--- a/src/components/antd/sidebar/s.module.scss
+++ b/src/components/antd/sidebar/s.module.scss
@@ -31,7 +31,6 @@
     }
   }
 
-
   :global(.ant-btn.ant-btn-primary) {
     background-color: #2d2d2d;
     border-color: #2d2d2d;
@@ -80,7 +79,7 @@
         &:not(:global(.ant-menu-item-selected)) {
           svg {
             path {
-              stroke: white;
+              stroke: var(--theme-primary-color);
             }
           }
         }
@@ -101,6 +100,76 @@
       border: 0;
       border-left: 4px solid;
       border-image: var(--gradient-secondary-pink) 0 100%;
+    }
+  }
+
+  :global(.side-menu-footer) {
+    @include font-p2-semi-500;
+    position: absolute;
+    bottom: 0;
+    padding: 24px 20px;
+
+    :global(.links) {
+      p {
+        margin: 16px 0;
+      }
+
+      a {
+        color: var(--theme-secondary-color);
+
+        &:hover {
+          color: var(--theme-primary-color);
+        }
+      }
+    }
+
+    :global(.ant-divider) {
+      &:global(.ant-divider-horizontal) {
+        border-top-color: var(--theme-border-color);
+      }
+    }
+
+    :global(.add-to-wallet) {
+      p {
+        @include font-lb1-regular;
+        color: var(--theme-secondary-color);
+        margin: 24px 0 8px 0;
+      }
+
+      :global(.buttons-container) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8px;
+
+        &>div {
+          border: 1px solid var(--theme-border-color);
+          border-radius: 4px;
+          box-sizing: border-box;
+          background-clip: border-box;
+          border-color: var(--theme-card-color);
+          transition: 0.5s ease;
+
+          &:hover {
+            border-color: transparent;
+            background: var(--gradient-secondary-pink);
+          }
+        }
+
+        button {
+          @include font-lb2-semi-bold;
+          color: var(--theme-primary-color);
+          background: var(--theme-card-color);
+          min-width: 104px;
+          height: 48px;
+          padding: 0;
+          margin: 0;
+
+          svg {
+            margin-right: 8px;
+          }
+        }
+      }
     }
   }
 }
