Side Menu styles (#25)

--- a/src/components/antd/sidebar/s.module.scss
+++ b/src/components/antd/sidebar/s.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/text';
+
 .sidebar {
   background: var(--theme-body-color);
 
@@ -6,7 +8,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 24px;
-    margin: 12px 8px;
+    margin: 27px 20px 60px 23px;
 
     :global(.logo) {
       display: flex;
@@ -24,9 +26,10 @@
   &:global(.ant-layout-sider-collapsed) {
     :global(.logo-wrapper) {
       flex-direction: column-reverse;
+      gap: 56px;
+      margin-bottom: 50px;
     }
   }
-
 
   :global(.ant-btn.ant-btn-primary) {
     background-color: #2d2d2d;
@@ -48,21 +51,47 @@
     background: var(--theme-card-color);
     color: var(--theme-primary-color);
 
-    a {
-      color: var(--theme-primary-color);
-    }
-
     :global(.ant-menu-item) {
       border: 0;
       border-bottom: 1px solid;
       border-image: linear-gradient(90deg, transparent, var(--theme-border-color), transparent) 1;
+
+      a {
+        @include font-p2-semi-500;
+        color: var(--theme-secondary-color);
+      }
+
+      &:global(.ant-menu-item-selected) {
+        a {
+          &:global(.active) {
+            background: var(--gradient-secondary-pink);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+          }
+        }
+      }
+
+      &:global(.ant-menu-item-active) {
+        a {
+          color: var(--theme-primary-color);
+        }
+
+        &:not(:global(.ant-menu-item-selected)) {
+          svg {
+            path {
+              stroke: var(--theme-primary-color);
+            }
+          }
+        }
+      }
     }
   }
 
-  :global(.ant-menu-selected),
-  :global(.ant-menu-item-selected) {
-    // TODO: get rid of the `!important` keyword
-    background-color: var(---theme-card-color) !important;
+  :global(.ant-menu-vertical .ant-menu-item),
+  :global(.ant-menu-vertical-left .ant-menu-item),
+  :global(.ant-menu-vertical-right .ant-menu-item),
+  :global(.ant-menu-inline .ant-menu-item) {
+    background-color: var(---theme-card-color);
     width: 100%;
 
     &::after {
@@ -71,6 +100,76 @@
       border: 0;
       border-left: 4px solid;
       border-image: var(--gradient-secondary-pink) 0 100%;
+    }
+  }
+
+  :global(.side-menu-footer) {
+    @include font-p2-semi-500;
+    position: absolute;
+    bottom: 0;
+    padding: 24px 20px;
+
+    :global(.links) {
+      p {
+        margin: 16px 0;
+      }
+
+      a {
+        color: var(--theme-secondary-color);
+
+        &:hover {
+          color: var(--theme-primary-color);
+        }
+      }
+    }
+
+    :global(.ant-divider) {
+      &:global(.ant-divider-horizontal) {
+        border-top-color: var(--theme-border-color);
+      }
+    }
+
+    :global(.add-to-wallet) {
+      p {
+        @include font-lb1-regular;
+        color: var(--theme-secondary-color);
+        margin: 24px 0 8px 0;
+      }
+
+      :global(.buttons-container) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8px;
+
+        &>div {
+          border: 1px solid var(--theme-border-color);
+          border-radius: 4px;
+          box-sizing: border-box;
+          background-clip: border-box;
+          border-color: var(--theme-card-color);
+          transition: 0.5s ease;
+
+          &:hover {
+            border-color: transparent;
+            background: var(--gradient-secondary-pink);
+          }
+        }
+
+        button {
+          @include font-lb2-semi-bold;
+          color: var(--theme-primary-color);
+          background: var(--theme-card-color);
+          min-width: 104px;
+          height: 48px;
+          padding: 0;
+          margin: 0;
+
+          svg {
+            margin-right: 8px;
+          }
+        }
+      }
     }
   }
 }
