(add) Inter font

--- a/src/components/custom/typography/s.module.scss
+++ b/src/components/custom/typography/s.module.scss
@@ -9,7 +9,7 @@
   }
 
   &.font-tertiary {
-    font-family: Times New Roman, sans-serif;
+    font-family: 'Times New Roman', sans-serif;
   }
 
   &.weight-500 {
