--- a/src/components/antd/alert/s.module.scss
+++ b/src/components/antd/alert/s.module.scss
@@ -29,7 +29,11 @@
   //}
 
   &:global(.ant-alert-info) {
-    --alert-bg-color: linear-gradient(135deg, rgba(255, 116, 57, 0.04) 0%, rgba(255, 57, 188, 0.04) 100%);
+    --alert-bg-color: linear-gradient(
+      135deg,
+      rgba(255, 116, 57, 0.04) 0%,
+      rgba(255, 57, 188, 0.04) 100%
+    );
     --alert-text-color: var(--gradient-red-safe);
     --alert-border-color: rgba(239, 74, 71, 0.32);
   }
@@ -45,15 +49,23 @@
   }
 
   &:global(.ant-alert-error) {
-    --alert-bg-color: linear-gradient(135deg, rgba(255, 116, 57, 0.04) 0%, rgba(255, 57, 188, 0.04) 100%);
+    --alert-bg-color: linear-gradient(
+      135deg,
+      rgba(255, 116, 57, 0.04) 0%,
+      rgba(255, 57, 188, 0.04) 100%
+    );
     --alert-text-color: var(--gradient-red-safe);
     --alert-border-color: rgba(239, 74, 71, 0.32);
   }
 
   @supports ((background-clip: text) or (-webkit-background-clip: text)) and
-  ((text-fill-color: transparent) or (-webkit-text-fill-color: transparent)) {
+    ((text-fill-color: transparent) or (-webkit-text-fill-color: transparent)) {
     &:global(.ant-alert-info) :global(.ant-alert-message) {
-      --alert-bg-color: linear-gradient(135deg, rgba(145, 79, 230, 0.04) 0%, rgba(49, 108, 223, 0.04) 100%);
+      --alert-bg-color: linear-gradient(
+        135deg,
+        rgba(145, 79, 230, 0.04) 0%,
+        rgba(49, 108, 223, 0.04) 100%
+      );
       //--alert-text-color: var(--L8-D8);
       --alert-text-color: var(--theme-red-color);
     }
@@ -82,10 +94,7 @@
       -webkit-text-fill-color: transparent;
       text-fill-color: transparent;
     }
-    //&:global(.ant-alert-info) :global(.ant-alert-message)::selection {
-    //  -webkit-text-fill-color: var(--L9-D9);
-    //  text-fill-color: var(--L9-D9);
-    //}
+
     &:global(.ant-alert-info) :global(.ant-alert-info)::selection {
       -webkit-text-fill-color: var(--theme-red-color);
       text-fill-color: var(--theme-red-color);
