--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,5 +1,11 @@
 @import 'src/styles/text';
 
+button {
+  cursor: pointer;
+  font-family: inherit;
+  transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
 .button-primary {
   display: flex;
   flex-direction: row;
@@ -23,12 +29,12 @@
 
   &:hover {
     color: #fff;
-    background: linear-gradient(90deg, #FF9574 0%, #FF4C8C 100%);
+    background: linear-gradient(90deg, #ff9574 0%, #ff4c8c 100%);
   }
 
   &:active {
     color: #fff;
-    background: linear-gradient(99.48deg, #FF9F81 27.44%, #FF4C8C 138.99%);
+    background: linear-gradient(99.48deg, #ff9f81 27.44%, #ff4c8c 138.99%);
   }
 
   &:disabled,
@@ -134,7 +140,11 @@
 
   &:hover {
     &::after {
-      background-image: linear-gradient(90deg, rgba(255, 149, 116, 0.2) 0%, rgba(255, 76, 140, 0.2) 100%);;
+      background-image: linear-gradient(
+        90deg,
+        rgba(255, 149, 116, 0.2) 0%,
+        rgba(255, 76, 140, 0.2) 100%
+      );
     }
 
     span {
@@ -144,7 +154,11 @@
 
   &:active {
     &::after {
-      background-image: linear-gradient(90deg, rgba(255, 149, 116, 0.2) 0%, rgba(255, 76, 140, 0.2) 100%);;
+      background-image: linear-gradient(
+        90deg,
+        rgba(255, 149, 116, 0.2) 0%,
+        rgba(255, 76, 140, 0.2) 100%
+      );
     }
   }
 
