--- a/src/components/custom/wrapper-content/s.module.scss
+++ b/src/components/custom/wrapper-content/s.module.scss
@@ -1,12 +1,13 @@
 .bg {
   background: var(--theme-body-color);
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   border: 1px solid var(--theme-border-color);
   justify-content: center;
+
   &__gradient {
     width: 900px;
-    height: 901px;
+    // height: 901px;
     background: radial-gradient(
       50% 50% at 50% 50%,
       rgba(255, 80, 139, 0.17) 0%,
