--- a/src/components/custom/connected-wallet/s.module.scss
+++ b/src/components/custom/connected-wallet/s.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/vars';
+
 @mixin text-gradient() {
   background: var(--gradient-secondary-pink);
   -webkit-text-fill-color: transparent;
@@ -7,9 +9,16 @@
 
 .dropdownButton {
   --padding: 20px;
+  --dimensions: 32px;
 
   padding-left: var(--padding);
   padding-right: var(--padding);
+
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    height: var(--dimensions);
+    padding: 0;
+    width: var(--dimensions);
+  }
 }
 
 .dropdownButtonContents {
@@ -18,6 +27,10 @@
   display: grid;
   grid-template-columns: 14px 1fr 10px;
   z-index: 5;
+
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .walletAddress {
@@ -25,14 +38,14 @@
   font-size: 16px;
   line-height: 1.2;
 
-  @media (max-width: 768px) {
+  @media (max-width: #{$max-width-tablet-portrait}) {
     display: none;
   }
 }
 
 .walletAddress,
 .dropdownArrow {
-  @media (max-width: 768px) {
+  @media (max-width: #{$max-width-tablet-portrait}) {
     display: none;
   }
 }
