(add) mobile logo

--- a/src/components/custom/header/s.module.scss
+++ b/src/components/custom/header/s.module.scss
@@ -39,14 +39,9 @@
   display: none;
   gap: 10px;
 
-  // @media (max-width: #{$max-width-mobile}) {
-  display: flex;
-  // }
-}
-
-.logo {
-  height: 34px;
-  width: 35px;
+  @media (max-width: #{$max-width-mobile}) {
+    display: flex;
+  }
 }
 
 .logoText {
