--- a/src/components/custom/header/s.module.scss
+++ b/src/components/custom/header/s.module.scss
@@ -13,6 +13,14 @@
   @media (max-width: #{$max-width-tablet-portrait}) {
     padding: 0 20px;
   }
+
+  :local(.logoWrapper) {
+    display: none;
+
+    @media (max-width: #{$max-width-mobile}) {
+      display: flex;
+    }
+  }
 }
 
 .title {
@@ -32,23 +40,6 @@
   display: flex;
   margin-left: auto;
   gap: 16px;
-}
-
-.logoWrapper {
-  align-items: center;
-  display: none;
-  gap: 10px;
-
-  @media (max-width: #{$max-width-mobile}) {
-    display: flex;
-  }
-}
-
-.logoText {
-  color: var(--theme-text-color);
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 1.2;
 }
 
 .mobileButton {
