--- a/src/components/custom/logo/s.module.scss
+++ b/src/components/custom/logo/s.module.scss
@@ -18,6 +18,7 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 1.2;
+  white-space: nowrap;
 
   :global(.ant-layout-sider-collapsed) & {
     display: none;
