--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -10,27 +10,20 @@
   --theme-icon-color: #606268;
   --theme-icon-hover-color: #fff;
   --theme-icon-hover-gradient: linear-gradient(135deg, #dd3dcb 15%, #ef9c92 85%);
-
   --theme-social-bg-color: #202020;
   --theme-social-link-color: #fff;
   --theme-primary-color: #fff;
   --theme-secondary-color: #b5b5b5;
   --theme-default-color: #b5b5b5;
-
   --theme-card-shadow: none;
   --theme-modal-shadow: 0 0 1px rgba(0, 0, 0, 0.4), 0 32px 64px rgba(0, 0, 0, 0.32);
   --theme-overlay-shadow: 0 0 1px rgba(0, 0, 0, 0.4), 0 32px 64px rgba(0, 0, 0, 0.32);
-
   --theme-input-background: #1d1d1d;
   --theme-input-placeholder: #606268;
-
   --theme-tooltip-bg: #262424;
   --theme-tooltip-item-bg-active: #202020;
-
   --theme-secondary-block: #171717;
-
   --theme-header-shadow: none;
-
   --theme-leaderboard-card-bg: linear-gradient(
     135deg,
     rgba(37, 32, 33, 0.8) 0%,
@@ -38,6 +31,6 @@
   );
   --theme-leaderboard-table-item: rgba(23, 23, 23, 0.6);
   --theme-leaderboard-counter-item: rgba(23, 23, 23, 0.7);
-
   --theme-text-color: #fff;
+  --theme-color-1: #2d2d2d;
 }
