--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -27,4 +27,7 @@
   --theme-leaderboard-counter-item: var(--gradient-pink);
   --theme-text-color: #000;
   --theme-color-1: #2d2d2d;
+  --theme-color-2: #ff9574;
+  --theme-color-3: #ff4c8c;
+  --theme-color-4: #686868;
 }
