--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -33,4 +33,7 @@
   --theme-leaderboard-counter-item: rgba(23, 23, 23, 0.7);
   --theme-text-color: #fff;
   --theme-color-1: #2d2d2d;
+  --theme-color-2: #ff9574;
+  --theme-color-3: #ff4c8c;
+  --theme-color-4: #686868;
 }
