--- a/src/components/custom/sidebar/s.module.scss
+++ b/src/components/custom/sidebar/s.module.scss
@@ -2,6 +2,8 @@
 @import '/src/styles/vars';
 
 .sidebar {
+  --sidebar-horizontal-padding: 20px;
+
   background: var(--theme-secondary-block);
 
   @media (max-width: #{$max-width-mobile}) {
