--- a/src/components/custom/side-menu-footer/s.module.scss
+++ b/src/components/custom/side-menu-footer/s.module.scss
@@ -1,4 +1,50 @@
 .sideMenuFooter {
   display: flex;
   flex-direction: column;
+  padding: 0 var(--sidebar-horizontal-padding);
+}
+
+.links {
+  border-bottom: 1px solid var(--theme-border-color);
+  list-style: none;
+  margin: 0 0 24px;
+  padding: 0 0 24px;
+}
+
+.item {
+  margin: 0 0 16px;
+
+  &:last-child {
+    margin: 0;
+  }
+}
+
+.link {
+  align-items: center;
+  color: var(--theme-color-4);
+  display: flex;
+  font-size: 12px;
+  font-weight: 500;
+  gap: 6px;
+  line-height: 1.2;
+
+  path {
+    fill: var(--theme-color-4);
+  }
+
+  &:hover {
+    color: var(--theme-text-color);
+
+    path {
+      fill: var(--theme-text-color);
+    }
+  }
+}
+
+.title {
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 0 0 8px;
+  text-transform: uppercase;
 }
