--- a/src/components/antd/button/s.module.scss
+++ b/src/components/antd/button/s.module.scss
@@ -5,19 +5,21 @@
   // primary regular
   --btn-primary-shadow: 0 10px 20px rgba(136, 120, 172, 0.2);
   --btn-primary-border: 0;
-  --btn-primary-bg: linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+  --btn-primary-bg: linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
   --btn-primary-text: #000;
 
   // primary hover
   --btn-primary-shadow-hover: 0 10px 20px rgba(136, 120, 172, 0.2);
   --btn-primary-border-hover: none;
-  --btn-primary-bg-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+  --btn-primary-bg-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
+    linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
   --btn-primary-text-hover: #000;
 
   // primary active
   --btn-primary-shadow-active: 0 10px 20px rgba(136, 120, 172, 0.2);
   --btn-primary-border-active: none;
-  --btn-primary-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%), #CC362E;
+  --btn-primary-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),
+    linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%), #cc362e;
   --btn-primary-text-active: #000;
 
   // primary disabled
@@ -29,19 +31,21 @@
   // default regular
   --btn-default-shadow: none;
   --btn-default-border: 0;
-  --btn-default-bg: linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+  --btn-default-bg: linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
   --btn-default-text: var(--theme-primary-color);
 
   // default hover
   --btn-default-shadow-hover: none;
   --btn-default-border-hover: none;
-  --btn-default-bg-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+  --btn-default-bg-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
+    linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
   --btn-default-text-hover: var(--theme-secondary-color);
 
   // default active
   --btn-default-shadow-active: none;
   --btn-default-border-active: none;
-  --btn-default-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%), #CC362E;
+  --btn-default-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),
+    linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%), #cc362e;
   --btn-default-text-active: var(--theme-primary-color);
 
   // default disabled
@@ -59,13 +63,18 @@
   // ghost hover
   --btn-ghost-shadow-hover: none;
   --btn-ghost-border-hover: none;
-  --btn-ghost-bg-hover: linear-gradient(90deg, rgba(255, 116, 116, 0.04) 0%, rgba(255, 76, 140, 0.04) 100%);
+  --btn-ghost-bg-hover: linear-gradient(
+    90deg,
+    rgba(255, 116, 116, 0.04) 0%,
+    rgba(255, 76, 140, 0.04) 100%
+  );
   --btn-ghost-text-hover: var(--theme-secondary-color);
 
   // ghost active
   --btn-ghost-shadow-active: none;
   --btn-ghost-border-active: none;
-  --btn-ghost-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%), #CC362E;
+  --btn-ghost-bg-active: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),
+    linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%), #cc362e;
   --btn-ghost-text-active: var(--theme-primary-color);
 
   // ghost disabled
@@ -124,13 +133,14 @@
 
 .component:global(.ant-btn) {
   @include font-p2-bold;
-  display: flex;
+
   align-items: center;
-  justify-content: center;
-  column-gap: 12px;
-  height: auto;
-  padding: 14px 26px;
   border-radius: 12px;
+  column-gap: 12px;
+  display: flex;
+  height: auto;
+  justify-content: center;
+  padding: 14px 26px;
   text-align: center;
 
   &:global(.ant-btn-lg) {
@@ -198,7 +208,7 @@
         bottom: -1px;
         display: block;
         position: absolute;
-        background: linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+        background: linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
         border-radius: 12px;
         z-index: 0 !important;
       }
@@ -294,7 +304,7 @@
         bottom: -1px;
         display: block;
         position: absolute;
-        background: linear-gradient(135deg, #DD3DCB 15.57%, #EF9C92 84.88%);
+        background: linear-gradient(135deg, #dd3dcb 15.57%, #ef9c92 84.88%);
         border-radius: 12px;
         z-index: 0 !important;
       }
