--- a/src/components/antd/button-outline-gradient/s.module.scss
+++ b/src/components/antd/button-outline-gradient/s.module.scss
@@ -1,37 +1,17 @@
-@mixin set-border-radius($button-height) {
-  &,
-  .border,
-  .background {
-    border-radius: calc(#{$button-height} / 2);
-  }
-}
-
 .wrapper {
   --gap: 2px;
   --transition-time: 0.25s;
 
   align-items: center;
-  background-color: var(--theme-border-color);
+  background-image: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
   border-radius: var(--button-border-radius);
   display: flex;
   height: var(--button-height);
   justify-content: center;
   position: relative;
 
-  .border {
-    background-color: var(--theme-border-color);
-    border-radius: var(--button-border-radius);
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    transition: opacity var(--transition-time) linear;
-    width: 100%;
-    z-index: 1;
-  }
-
   .background {
-    background-color: var(--theme-secondary-block);
+    background-color: var(--theme-body-color);
     border-radius: var(--button-border-radius);
     display: block;
     height: calc(100% - var(--gap));
@@ -44,7 +24,7 @@
   .button {
     &:global(.ant-btn) {
       align-items: center;
-      background-color: transparent;
+      background: transparent;
       border-radius: var(--button-border-radius);
       border: none;
       color: var(--theme-text-color);
@@ -64,8 +44,6 @@
   // states
   &:hover,
   &:focus {
-    background-image: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
-
     .border {
       opacity: 0;
     }
@@ -95,13 +73,5 @@
   // variants
   &.lg {
     height: var(--button-height-lg);
-  }
-
-  &.rounded {
-    @include set-border-radius(var(--button-height));
-
-    &.lg {
-      @include set-border-radius(var(--button-height-lg));
-    }
   }
 }
