--- a/src/components/antd/spin/s.module.scss
+++ b/src/components/antd/spin/s.module.scss
@@ -1,4 +1,6 @@
 .spin {
+  margin: auto;
+
   &:global(.ant-spin) {
     & :global(.ant-spin-dot .ant-spin-dot-item) {
       background-color: var(--theme-color-3);
