--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,4 +5,8 @@
 .ant-layout-content {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+  max-height: calc(100vh - var(--theme-header-height));
+  overflow-y: auto;
+  padding: 40px;
 }
